# megalint-config

./: .checkov.yml  .devskim.json  .gitignore  .gitleaks.toml  .grype.yaml  .mega-linter.local.yml  .mega-linter.yml  .secretlintignore  .trufflehog-exclude-paths.txt  AGENTS.md  README.md  Taskfile.yml  action.yml  kics.config  pyproject.toml  trivy.yaml
.github/workflows/: check.yml  custom-flavor-release.yml  custom-flavor-validate.yml  megalinter.yml  update-latest-tag.yml
.mega-linter.d/: .checkov.yml  .devskim.json  .gitleaks.toml  .grype.yaml  .jscpd.json  .markdownlint.json  .mega-linter-changed.yml  .secretlintignore  .trufflehog-exclude-paths.txt  .yamllint.yml  kics.config  trivy.yaml
.taskfiles/: dev.yml  flavor.yml  install.yml  megalint.yml  test.yml
.taskfiles/scripts/: changed-enable-linters.sh  megalint-relocate-reports.sh  megalint-run.sh  megalint-sarif-chunk.sh  megalint-verify.sh  sarif-to-markdown.jq
ci/gitlab/: run.sh  (+2 more)
docs/: custom-flavor-generation.md
scripts/: build_flavor_dockerfile.py  changed_filter_regex.py  compute-release-version.sh  parse_megalinter_config.py  validate_config.py  validate_custom_flavor.py
tests/: changed-enable-linters.bats  compute-release-version.bats  conftest.py  megalint-relocate-reports.bats  megalint-run.bats  megalint-sarif-chunk.bats  megalint-verify.bats  test_build_flavor_dockerfile.py  test_changed_filter_regex.py  test_config_sanity.py  test_megalinter_workflow.py  test_parse_megalinter_config.py  test_release_workflow.py  test_templates.py  test_validate_custom_flavor.py  test_version_management.py
(+7 files in other folders)
